RESOLVED FIXED157508
Clicks do not work in Safari after pressing the Track package button in Gmail
https://bugs.webkit.org/show_bug.cgi?id=157508
Summary Clicks do not work in Safari after pressing the Track package button in Gmail
Tim Horton
Reported 2016-05-09 23:41:47 PDT
Clicks do not work in Safari after pressing the Track package button in Gmail
Attachments
Patch (1.99 KB, patch)
2016-05-09 23:42 PDT, Tim Horton
andersca: review+
Tim Horton
Comment 1 2016-05-09 23:42:07 PDT
Tim Horton
Comment 2 2016-05-10 10:05:01 PDT
Note You need to log in before you can comment on or make changes to this bug.